--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@ database=QuanLyThanhVien
 ACCESS_TOKEN_LIFE=12h
 ACCESS_TOKEN_SECRET=Cuong01242663149
 PREVENT=users
-EmailAccount=
-EmailPassword=
+EmailAccount=notice@banhoctap.dev
+EmailPassword=01242663149
 CLIENT_ID=656408292597-vcgkp2j8d3ipv19i6g9sipul1ngg606o.apps.googleusercontent.com
 CLIENT_SECRET=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
 REDIRECT_URL=https://developers.google.com/oauthplayground
